<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tentangaplikasi">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- HEADER TENTANG APLIKASI -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <!-- Background Ungu -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="232dp"
                android:background="@color/tentangaplikasi"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/urbanistregular"
                    android:lineSpacingExtra="7dp"
                    android:padding="30dp"
                    android:text="Tentang\nAplikasi"
                    android:textColor="@color/text"
                    android:textSize="36sp" />
            </LinearLayout>

            <!-- Dekorasi sudut kanan atas -->
            <ImageView
                android:layout_width="170dp"
                android:layout_height="250dp"
                android:layout_gravity="top|end"
                android:contentDescription="Header Decoration"
                android:scaleType="fitXY"
                android:src="@drawable/asset1" />
        </FrameLayout>

        <!-- CARD CONTAINER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_top_white"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/urbanistbold"
                android:padding="15sp"
                android:text="📝 Storyline"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <!-- CARD 1: STORYLINE -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/urbanistregular"
                        android:lineSpacingExtra="3dp"
                        android:text="@string/storyline"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- CARD 2: LINK DATASET -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/urbanistbold"
                android:padding="15sp"
                android:text="🔗 Link Dataset"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/tvDatasetLink"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/urbanistregular"
                        android:lineSpacingExtra="3dp"
                        android:text="@string/dataset2"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvLink"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:padding="8dp"
                        android:text="@string/datasetlink"
                        android:textSize="14sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- CARD 3: CARA KERJA -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/urbanistbold"
                android:padding="15sp"
                android:text="⚙️ Cara Kerja Aplikasi"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/urbanistregular"
                        android:lineSpacingExtra="3dp"
                        android:text="@string/carakerjaplikasi"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
